--- a/samples/clase3-tecnicas-noif/README.html
+++ b/samples/clase3-tecnicas-noif/README.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CLASE 3: Técnicas NoIf - CursoNET</title>
+    <title>CLASE 3: Técnicas NoIf // CursoNET</title>
     <style>
         * {
             margin: 0;
